--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,97 @@
-﻿<html>
-<head>
-    {% if title %}
-    <title>{{ title }}</title>
-    {% else %}
-    <title>No title</title>
-    {% endif %}
-</head>
-<body>
-    <h1>Hello, {{ user.name }}!</h1>
-</body>
-</html>
+﻿{% extends "base.html" %}
+
+{% block content %}
+<style>
+    * {
+        box-sizing: border-box;
+    }
+  
+
+    .centered {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: white;
+        border-radius: 10px;
+        padding: 15px 10px 10px 30px;
+        width:55%;
+
+    }
+
+    body {
+        margin: 0;
+        font-family: Arial;
+    }
+
+    .row {
+        display: -ms-flexbox; /* IE10 */
+        display: flex;
+        -ms-flex-wrap: wrap; /* IE10 */
+        flex-wrap: wrap;
+        padding: 0 4px;
+    }
+
+    /* Create four equal columns that sits next to each other */
+    .column {
+        -ms-flex: 25%; /* IE10 */
+        flex: 25%;
+        max-width: 25%;
+        padding: 0 4px;
+    }
+
+        .column img {
+            margin-top: 8px;
+            vertical-align: middle;
+            width: 100%;
+        }
+
+    /* Responsive layout - makes a two column-layout instead of four columns */
+    @media screen and (max-width: 800px) {
+        .column {
+            -ms-flex: 50%;
+            flex: 50%;
+            max-width: 50%;
+        }
+    }
+
+    /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+    @media screen and (max-width: 600px) {
+        .column {
+            -ms-flex: 100%;
+            flex: 100%;
+            max-width: 100%;
+        }
+    }
+</style>
+<title>index</title>
+
+<!-- Photo Grid -->
+<div class="row">
+        <div class="column">
+            <img src="{{url_for('static', filename='images/model5.jpg')}}" style="width:100%">
+            <img src="{{url_for('static', filename='images/model10.jpg')}}" style="width:100%">
+        </div>
+        <div class="column">
+            
+        <img src="{{url_for('static', filename='images/model4.jpg')}}" style="width:100%">
+        <div class="centered" style="color: black;"><p style="font-family: 'Brush Script MT', cursive; font-size: 2.5rem;">"Take action, support others, get involved. Be the change."</p>
+                                                                        <p style="text-align: center;">One of a kind social media platform for raising awareness.</p></div>
+            
+        <img src="{{url_for('static', filename='images/model2.jpg')}}" style="width:100%">
+        <img src="{{url_for('static', filename='images/model5.jpg')}}" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="{{url_for('static', filename='images/model5.jpg')}}" style="width:100%">
+            <img src="{{url_for('static', filename='images/model11.jpg')}}" style="width: 100%">
+        </div>
+        <div class="column">
+            <img src="{{url_for('static', filename='images/model4.jpg')}}" style="width:100%">
+            <img src="{{url_for('static', filename='images/model2.jpg')}}" style="width:100%">
+            <img src="{{url_for('static', filename='images/model5.jpg')}}" style="width:100%">
+        </div>
+
+
+</div>
+
+{% endblock %}
