filtering option added

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -76,7 +76,7 @@
             
         <img src="{{url_for('static', filename='images/model4.jpg')}}" style="width:100%">
         <div class="centered" style="color: black;"><p style="font-family: 'Brush Script MT', cursive; font-size: 2.5rem;">"Take action, support others, get involved. Be the change."</p>
-                                                                        <p style="text-align: center;">One of a kind social media platform for raising awareness.</p></div>
+                                                                        <p style="text-align: center;">One of a kind social media platform for raising awareness about body-image conditions.</p></div>
             
         <img src="{{url_for('static', filename='images/model2.jpg')}}" style="width:100%">
         <img src="{{url_for('static', filename='images/model5.jpg')}}" style="width:100%">
