--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,58 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <style>
-        .main-body {
-            padding-top: 56px;
-        }
-
-      
-        * {
-            box-sizing: border-box;
-        }
-
-        /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-        @media screen and (max-width: 600px) {
-            .column {
-                -ms-flex: 100%;
-                flex: 100%;
-                max-width: 100%;
-            }
-        }
-        .fa {
-            padding: 5px;
-            font-size: 20px;
-            width: 40px;
-            text-align: center;
-            text-decoration: none;
-            margin: 5px 2px;
-            border-radius: 50%;
-        }
-
-            .fa:hover {
-                opacity: 0.7;
-            }
-
-        .fa-facebook {
-            background: #3B5998;
-            color: white;
-
-        }
-
-
-        .fa-linkedin {
-            background: #007bb5;
-            color: white;
-        }
-
-
-        .fa-instagram {
-            background: #125688;
-            color: white;
-        }
-    
-    </style>
+    <link rel="stylesheet" type="text/css" href="./static/style.css">
 </head>
 
 <body>
