--- a/app/templates/myfeed.html
+++ b/app/templates/myfeed.html
@@ -70,7 +70,7 @@
             $(document).on("click", "button", function () {
                 var clicked_obj = $(this);
 
-                var TaggSelectObj = document.getElementById('TagSelect');
+                var TagSelectObj = document.getElementById('TagSelect');
                 var tag = TagSelectObj.options[TagSelectObj.selectedIndex].value;
 
                 $.ajax({
